--- a/pengenlan.html
+++ b/pengenlan.html
@@ -167,10 +167,12 @@
 <body>
   <
   <!-- Tombol Playlist -->
-  <button class="btn-playlist" onclick="window.location.href='playlist.html'">
+  <button class="btn-playlist" onclick="window.location.href='lagu.html'")
+    '">
     🎵 Lihat Playlist Saya
   </button>
 </body>
 </html>
 
 </html>
+
